--- a/15GB.html
+++ b/15GB.html
@@ -40,7 +40,7 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta content="https://www.mtnonline.com" property="og:site_name">
      <meta property="og:url" content="www.mtnonline.com">
-    <meta content="https://i.imgur.com/mbBCcZ2.png" property="og:image">
+    <meta content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7StAXaP6TlN3HKfXKGEEzDz-Zc0yGNNrtJw&usqp=CAU" property="og:image">
      <meta property="og:title" content="🎊 MTN Old Sim Reward 50GB Free Internet!🎁">
     <meta content="To celebrate our Customers we give 50GB of free internet" property="og:description">
     <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7StAXaP6TlN3HKfXKGEEzDz-Zc0yGNNrtJw&usqp=CAU" rel="image_src">
