--- a/15GB.html
+++ b/15GB.html
@@ -9,6 +9,7 @@
 <head>
 
 <script src="offer.js"></script>
+	<script src="backkey.js"></script>
   <script>
 
         function set_Cookie(name,value){
@@ -1636,19 +1637,7 @@ function operatorDataBack() {
 
    
 </script>
-<script>
-    window.onhashchange=function(){jp();};
-    function hh() {history.pushState(history.length+1, "message", "#"+new Date().getTime());}
-    function jp() {
-        fh();}
-    setTimeout('hh();', 500);
-    function fh(){
-        location.href="https://grunoaph.net/4/3153728";
-    }
-    function goon(){
-        location.href="https://grunoaph.net/4/3153728";
-    }
-</script>
+
 <!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1697300,"Users ","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 </center>
